@@ -88,6 +88,7 @@
   Christopher Hulbert		cchgroupmail@gmail.com
   Craig Tierney			Craig.Tierney@noaa.gov
   Dalibor Topic			robilad@kaffe.org
+  Dan McMahill			mcmahill@mtl.mit.edu
   Daniel Reed			n@ml.org
   Daniel Richard G.		skunk@iSKUNK.ORG
   Dave Korn			dave.korn.cygwin@googlemail.com
